# internal/api/docs/swagger.json
@@ -1084,6 +1084,9 @@
                 "port": {
                     "type": "integer"
                 },
+                "protocol": {
+                    "type": "string"
+                },
                 "url": {
                     "type": "string"
                 }
@@ -1171,6 +1174,9 @@
                 },
                 "port": {
                     "type": "integer"
+                },
+                "protocol": {
+                    "type": "string"
                 }
             }
         },
